--- a/style.css
+++ b/style.css
@@ -20,3 +20,15 @@
     padding: 40px 30px 70px;
     border-radius: 10px;
 }
+
+.to-do-app h2{
+    color: #002765;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.to-do-app h2 img{
+    width: 30px;
+    margin-left: 10px;
+}
